2006-08-16	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* common/src/ivs_connection.cpp:
	fixed some bugs in palette-filter/tight-encoding which were
	responsible for grave graphic-errors in some cases (when using
	mono-palette)

	* common/include/ivs_connection.h:
	* common/src/ivs_connection.cpp:
	added Zlib-encoding

	* common/include/rfb/rfbint.h:
	* common/include/rfb/rfbconfig.h:
	removed as generated by configure

	* ima/resources/splash.png:
	new modern splash-screen

2006-08-15	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* common/src/ivs_connection.cpp:
	disabled tight- and zlib-encoding for the moment as it causes
	graphic-errors when connecting to Win32-VNC-server

	* ima/src/client.cpp:
	* ima/src/client_manager.cpp:
	fixes with bool-vars

	* ima/src/config_widget.cpp:
	* ima/src/support_widget.cpp:
	do a static_cast instead of dynamic_cast for getting pointer to layout
	of parent - HACK for make app working on Win32/MinGW which has a problem
	with dynamic_cast

	* ima/src/kmultittabbar.cpp:
	commented out some stuff which is does not work on Win32

	* configure.in:
	* ica/x11/:
	* ica/x11/x11vnc.c:
	upgraded to x11vnc 0.8.3

2006-08-14	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/ica_main.cpp:
	* ica/src/isd_server.cpp:
	* common/include/isd_base.cpp:
	* common/src/dsa_key.cpp:
	* common/src/isd_connection.cpp:
	* ima/src/client.cpp:
	* ima/src/client_manager.cpp:
	* ima/src/main.cpp:
	* ima/src/main_window.cpp:
	* ima/src/snapshot_list.cpp:
	* ima/src/snapshot_list.h:
	use new methods from localSystem-namespace for retrieving information
	where to store keys and settings

	* common/include/local_system.h:
	* common/src/local_system.cpp:
	added methods for platform-independent storage of keys and settings:
	  - privateKeyPath()
	  - publicKeyPath()
	  - snapshotDir()
	  - globalConfigPath()
	  - personalConfigDir()
	  - personalConfigPath()
	  - ensurePathExists()

	* ima/src/dialogs.h: