@@ -1,3 +1,11 @@
+2006-08-17	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
+	* common/src/local_system.cpp:
+	correct system-calls for shutting down, rebooting and logging off user
+
+	* ima/src/client.cpp:
+	bugfixes
+
 2006-08-16	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	* common/src/ivs_connection.cpp:
